Fixes some bugs revealed in functional tests

--- a/app/views/backend/buildings/_form.html.haml
+++ b/app/views/backend/buildings/_form.html.haml
@@ -5,7 +5,7 @@
   =f.input :born_at
   =f.input :identification_number
   =f.referenced_association :nature
-  =f.referenced_association :variety
+  =f.input :variety
   =f.input :description, :field => :text
   =f.input :reservoir, :show => :reservoir
   =f.input :external, inline_label: "Cas des constructions utiles mais non présentes sur l'exploitation"
