--- a/app/views/backend/land_parcels/index.html.haml
+++ b/app/views/backend/land_parcels/index.html.haml
@@ -3,8 +3,7 @@
 
 =main_toolbar do |t|
   -t.new
-  -t.link :merge, {}, :remote=>true, :method=>:post, "data-confirm" => tl(:are_you_sure), "data-with"=>"td.plot.selected input", "data-redirect"=>true, "data-type"=>"text"
-
+  -# t.merge, {}, :remote=>true, :method=>:post, "data-confirm" => tl(:are_you_sure), "data-with"=>"td.plot.selected input", "data-redirect"=>true, "data-type"=>"text"
 
 =beehive do |b|
   -b.tabbox do
