--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -3,7 +3,7 @@
   =f.input :number
   =f.input :commercial_name
   =f.input :active
-  =f.referenced_association :variety
+  =f.input :variety
 
 =field_set :nature do
   =f.referenced_association :category
