--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,20 +8,22 @@
     %i
     %h1="Ekylibre"
 
-  =link_to(Ekylibre::Modules.human_name(current_module), {:controller => :dashboards, :action => current_module}, :id => "module")
+
+  =link_to(Ekylibre::Modules.human_name(current_module), {:controller => :dashboards, :action => current_module}, :id => "module") if current_module
 
   .collapse
 
-    %ul#modules
-      -for mod in Ekylibre::Modules.hash.keys
-        %li.separator
-        :ruby
-          attrs = {:id => "#{mod}-module"}
-          attrs[:class] = :active if current_module == mod
-        %li{attrs}
-          =link_to({:controller => :dashboards, :action => mod}) do
-            %i
-            =Ekylibre::Modules.human_name(mod)
+    -if current_module
+      %ul#modules
+        -for mod in Ekylibre::Modules.hash.keys
+          %li.separator
+          :ruby
+            attrs = {:id => "#{mod}-module"}
+            attrs[:class] = :active if current_module == mod
+          %li{attrs}
+            =link_to({:controller => :dashboards, :action => mod}) do
+              %i
+              =Ekylibre::Modules.human_name(mod)
 
     %ul#user
       %li.separator
