--- a/app/views/backend/deposits/show.html.haml
+++ b/app/views/backend/deposits/show.html.haml
@@ -1,15 +1,16 @@
 =main_toolbar do |t|
+  -t.export do |e|
+    -e.deposit @deposit.number, @deposit
   -t.edit @deposit
-  -t.print_deposit @deposit
 
 =attributes_list(@deposit) do |l|
   -l.attribute :number
-  -l.attribute :cash, :url=>true
-  -l.attribute :mode # , :url=>true
+  -l.attribute :cash, :url => true
+  -l.attribute :mode # , :url => true
   -l.attribute :payments_count
   -l.attribute :responsible
   -l.attribute :description
-  -l.attribute :journal_entry, :url=>true
+  -l.attribute :journal_entry, :url => true
 
 %h2=Deposit.human_attribute_name("payments")
 =list :payments
