--- a/app/views/backend/document_templates/index.html.haml
+++ b/app/views/backend/document_templates/index.html.haml
@@ -1,5 +1,5 @@
 =main_toolbar do |t|
   -t.new
-  -t.load_ "data-confirm" => tg(:are_you_sure), :method=>:post
+  -t.load_ "data-confirm" => :are_you_sure.tl, :method => :post
 
 =list
