--- a/app/views/backend/transports/index.html.haml
+++ b/app/views/backend/transports/index.html.haml
@@ -1,11 +1,15 @@
 =kujaku do |k|
   -k.text
   -# k.radio :all, :waiting, :making, :ready, :shipped
+
 =main_toolbar do |t|
   -waiting_transporters = Entity.necessary_transporters
   -unless (count = OutgoingDelivery.without_transporter.count).zero?
-    -t.link tl(:new_transport_of_x_deliveries, :count=>count), :action=>:new
-  -for transporter in waiting_transporters
-    -t.link tl(:new_transport_of_x_deliveries_for_y, :count=>transporter.waiting_deliveries.count, :transporter=>transporter.last_name), :action=>:new, :transporter_id=>transporter.id
+    -t.new :label => :new_transport_of_x_deliveries.tl(:count => count)
+  -if waiting_transporters.count > 0
+    -t.new :variants => waiting_transporters.inject({}) {|h,t| h[:new_transport_of_x_deliveries_for_y.tl(:count => t.waiting_deliveries.count, :transporter => t.last_name)] = {:transporter_id => transporter.id}; h }
+  -#for transporter in waiting_transporters
+    -t.new :transporter_id => transporter.id, :new_transport_of_x_deliveries_for_y.tl(:count => transporter.waiting_deliveries.count, :transporter => transporter.last_name)
+
 =list
 
