--- a/app/views/backend/sales/index.html.haml
+++ b/app/views/backend/sales/index.html.haml
@@ -6,7 +6,7 @@
     =select_tag(:responsible_id, options_for_select([[]] + Entity.all.collect{|u| [u.label, u.id]}, params[:responsible_id]))
 
 =main_toolbar do |t|
-  -t.new :variants => SaleNature.all.inject({}){|h,n| h[n.name] = {:nature_id => n.id}; h}
+  -t.new :variants => SaleNature.reorder(:by_default).all.inject({}){|h,n| h[n.name] = {:nature_id => n.id}; h}
   -t.new
   -# t.print_sales Date.today.to_s, :action=>:index, :controller=>:sales
 
