Fixes "empty dropdown buttons" bug

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -54,7 +54,7 @@
 	// needed for dropdown menus
         // overflow: auto;
         // @include clearfix;
-        overflow-x: auto;
+        // overflow-x: auto;
         height: auto;
       }
     }
