--- a/app/views/backend/animals/index.html.haml
+++ b/app/views/backend/animals/index.html.haml
@@ -1,5 +1,6 @@
 =kujaku
 =main_toolbar do |t|
-  -# t.export :animals
+  -t.export do |e|
+    -e.animal_list @animals.last.name.to_s, @animals
   -t.new
 =list
