Fixes somes bugs on Entity and db:seed and demo

--- a/app/views/backend/animals/index.html.haml
+++ b/app/views/backend/animals/index.html.haml
@@ -1,6 +1,6 @@
 =kujaku
 =main_toolbar do |t|
   -t.export do |e|
-    -e.animal_list @animals.last.name.to_s, @animals
+    -e.animal_list @animals.map(&:id).sort.join(":"), @animals
   -t.new
 =list
