Fixes meeting links

--- a/app/views/backend/land_parcels/show.html.haml
+++ b/app/views/backend/land_parcels/show.html.haml
@@ -1,6 +1,6 @@
 =main_toolbar do |t|
   -t.edit @land_parcel
-  -t.divide @land_parcel
+  -#t.divide @land_parcel
 
 =beehive do |b|
   -b.tabbox do
