--- a/app/views/backend/operations/show.html.haml
+++ b/app/views/backend/operations/show.html.haml
@@ -3,7 +3,7 @@
 
 =attributes_list(@operation) do |l|
   -# l.attribute :name
-  -l.attribute :nature
+  -# l.attribute :nature
   -# l.attribute :responsible, :label=>:label
   -# l.attribute :target, :label=>:name
   -# l.attribute :planned_on
