fixes demo task.

--- a/app/views/backend/plants/_form.html.haml
+++ b/app/views/backend/plants/_form.html.haml
@@ -6,5 +6,4 @@
   =f.input :born_at
   =f.input :description # affiche le champ description formaté en zone de texte
   =f.input :picture
-  =image_tag(@vegetal.picture.url(:thumb))
-  =f.custom_fields
+  =image_tag(@plant.picture.url(:thumb))
