Adds price_template_id columns for sales and purchases

--- a/app/views/backend/entities/_form.html.haml
+++ b/app/views/backend/entities/_form.html.haml
@@ -28,7 +28,7 @@
   =f.input :first_met_on
   =f.referenced_association :proposer
   =f.referenced_association :responsible, :source => :employees
-  =f.input :vat_submissive
+  =f.input :vat_subjected
   =f.input :reminder_submissive, :show => :reduction_percentage
   =f.input :reduction_percentage
   =f.input :authorized_payments_count
