--- a/app/views/backend/sales/index.html.haml
+++ b/app/views/backend/sales/index.html.haml
@@ -7,7 +7,7 @@
 
 =main_toolbar do |t|
   -t.new :variants => SaleNature.reorder(:by_default).all.inject({}){|h,n| h[n.name] = {:nature_id => n.id}; h}
-  -t.new
+  -# t.new
   -# t.print_sales Date.today.to_s, :action=>:index, :controller=>:sales
 
 =list
