--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -1030,7 +1030,7 @@ a.selector-dropdown {
   }
 }
 
-.input-append, .btn-group-dropdown {
+.input-append, .btn-group-dropdown, .selector {
   @include button-group;
 }
 
