--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -1,6 +1,6 @@
 =beehive(:production) do
   -hbox do
-    -cell :last_milk_result
+    -#cell :last_milk_result
     -cell :product_bar
     -cell :last_products
   -tabbox do
