--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -20,22 +20,23 @@
       =f.input :conclusion
   -b.cell :itemsss do
     -#=f.nested_association(:items)
-    =link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
     %table
       %thead
         %tr
-          %th=SaleItem.human_attribute_name(:product_and_price)
+          %th=SaleItem.human_attribute_name(:product)
           %th=SaleItem.human_attribute_name(:quantity)
           %th=SaleItem.human_attribute_name(:price) # Custom price
+          %th=SaleItem.human_attribute_name(:tax) # Custom price
           %th=SaleItem.human_attribute_name(:pretax_amount)
           %th=SaleItem.human_attribute_name(:amount)
+          %th=SaleItem.human_attribute_name(:currency)
           %th
       %tfoot
         %tr.total
-          %th{:colspan => 3}="total".tl
-          %td#pretax-amount.decimal=@sale.pretax_amount.l :currency => @sale.currency
-          %td#amount.decimal=@sale.amount.l :currency => @sale.currency
+          %th{:colspan => 4}="total".tl
+          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}=@sale.pretax_amount.l :currency => @sale.currency
+          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}=@sale.amount.l :currency => @sale.currency
       %tbody#items
-        =f.simple_fields_for :items do |item|
+        =f.simple_fields_for :items, @sale.items do |item|
           =render 'item_fields', :f => item
-        -#=render :partial => 'item_form', :collection => @sale.items
+    =link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
