--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -18,7 +18,7 @@
       =f.input :function_title
       =f.input :introduction
       =f.input :conclusion
-  -b.cell :itemsss do
+  -b.cell :items do
     -#=f.nested_association(:items)
     %table
       %thead
@@ -31,12 +31,14 @@
           %th=SaleItem.human_attribute_name(:amount)
           %th=SaleItem.human_attribute_name(:currency)
           %th
-      %tfoot
-        %tr.total
-          %th{:colspan => 4}="total".tl
-          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}=@sale.pretax_amount.l :currency => @sale.currency
-          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}=@sale.amount.l :currency => @sale.currency
       %tbody#items
         =f.simple_fields_for :items, @sale.items do |item|
           =render 'item_fields', :f => item
-    =link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
+      %tfoot
+        %tr.total
+          %td=link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
+          %th{:colspan => 3}="total".tl
+          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}=@sale.pretax_amount
+          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}=@sale.amount
+          %td=@sale.currency
+          %th
