Try to enhance procedures...

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -53,7 +53,7 @@
         background: #FFFFFF;
 	// needed for dropdown menus
         // overflow: auto;
-        // @include clearfix;
+        @include clearfix;
 	// overflow-x: auto;
         height: auto;
       }
