--- a/app/views/backend/procedures/play.html.haml
+++ b/app/views/backend/procedures/play.html.haml
@@ -1,20 +1,44 @@
 -reference = @procedure.reference
-=form_tag do
+=form_tag(:action => :jump) do
   -if reference.variables.size > 0
     =field_set :parameters do
       -for variable in reference.variables.values
-        .control-group
-          %label.control-label=variable.human_name
-          .controls
-            .input-append=text_field_tag("variables[#{variable.name}]", nil, 'data-selector' => url_for(:action => :unroll, :controller => :products))
+        -if variable.new?
+          .control-group
+            %label.control-label=variable.human_name
+            .controls
+              NEW
+        -elsif variable.given?
+          .control-group
+            %label.control-label=variable.human_name
+            .controls
+              %label=variable.value
+        -else
+          .control-group
+            %label.control-label=variable.human_name
+            .controls
+              .input-append
+                :ruby
+                  url = {:action => :unroll, :controller => :products}
+                  url[:variety] = variable.variety if variable.variety
+                  url[:abilities] = variable.abilities if variable.abilities
+                =text_field_tag("variables[#{variable.name}]", nil, 'data-selector' => url_for(url))
   -if reference.operations.size > 0
     =field_set :operations do
-      OK
+      -for operation in reference.operations
+        %h4=operation.name
+        %ul
+          -for task in operation.tasks
+            %li=task.expression
 
   =form_actions do
-    =button_tag(:save.tl, :name => :redirect, :value => (@procedure.root? ? backend_procedures_url : backend_procedure_url(@procedure)))
+    =button_tag(:name => :redirect, :value => (@procedure.root? ? backend_procedures_url : backend_procedure_url(@procedure)), :class => "btn btn-save") do
+      %i
+      =:save.tl
     -for following in @procedure.followings
-      =button_tag(:save_and_go.tl, :name => :jump_to, :value => following)
+      =button_tag(:name => :go_to, :value => following.name, :class => "btn btn-chevron-right") do
+        %i
+        =:save_and_go_to_x.tl(:x => following.human_name)
 
     =link_to((params[:redirect] ? params[:redirect] : @procedure.root? ? backend_procedures_url : backend_procedure_url(@procedure)), :class => "btn btn-cancel") do
       %i
