--- a/app/views/backend/activities/_watching_fields.html.haml
+++ b/app/views/backend/activities/_watching_fields.html.haml
@@ -3,5 +3,5 @@
 .nested-fields
   =link_to_remove_nested_association(:watching, f)
   =f.referenced_association(:product_nature, :wrapper_html => {:id => 'product_nature-field'})
-  =f.referenced_association(:area_unit, :wrapper_html => {:id => 'area_unit-field'})
-  =f.referenced_association(:work_unit, :wrapper_html => {:id => 'work_unit-field'})
+  =f.input(:area_unit, :wrapper_html => {:id => 'area_unit-field'})
+  =f.input(:work_unit, :wrapper_html => {:id => 'work_unit-field'})
