--- a/app/views/backend/land_parcel_groups/_form.html.haml
+++ b/app/views/backend/land_parcel_groups/_form.html.haml
@@ -1,12 +1,12 @@
 =field_set(:major => true) do
   =f.referenced_association :nature
   =f.input :name
-  =f.input :identification_number
+  =f.input :work_number
   =f.input :description, :field => :text
   =f.input :born_at
 
 =field_set(:details) do
-  =f.input :number
+  =f.input :real_quantity
   =f.referenced_association :unit
   =f.input :active
   =f.input :external
