finalize demo task for landparcels, landparcelclusters and landparcelgroups

--- a/app/views/backend/land_parcel_groups/_form.html.haml
+++ b/app/views/backend/land_parcel_groups/_form.html.haml
@@ -7,7 +7,7 @@
 
 =field_set(:details) do
   =f.input :real_quantity
-  =f.referenced_association :unit
+  =f.input :unit
   =f.input :active
   =f.input :external
   =f.referenced_association :owner
