--- a/app/views/backend/land_parcels/_form.html.haml
+++ b/app/views/backend/land_parcels/_form.html.haml
@@ -3,5 +3,5 @@
   =f.input :work_number
   =f.input :description, :field => :text
   =f.input :real_quantity
-  =f.referenced_association :unit
+  =f.input :unit
   -# input :shape
