rename ActivityWatching in Production

--- a/app/views/backend/procedures/_form.html.haml
+++ b/app/views/backend/procedures/_form.html.haml
@@ -1,6 +1,5 @@
 =field_set do
   =f.input :nomen
-  =f.referenced_association :activity
-  =f.referenced_association :campaign
+  =f.referenced_association :production
 -if @procedure.errors.count > 0
   =@procedure.errors.messages.inspect
