--- a/app/views/backend/productions/edit.html.haml
+++ b/app/views/backend/productions/edit.html.haml
@@ -1,8 +1,8 @@
 -# Generated automatically. Remove this line to keep your changes.
-=backend_form_for([:backend, @activity_watching], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
+=backend_form_for([:backend, @production], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
   -if params[:redirect]
     =hidden_field_tag(:redirect, params[:redirect])
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_activity_watching_url(@activity_watching), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+    =link_to(tl(:cancel), backend_production_url(@production), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
