--- a/app/views/backend/productions/_form.html.haml
+++ b/app/views/backend/productions/_form.html.haml
@@ -1,2 +1,12 @@
-=field_set do
-  =f.input :name
+=field_set do # partie info general de l entité animal
+  =f.referenced_association :activity, :source => :main_activity
+  =f.referenced_association :campaign
+  =f.referenced_association :product_nature,:source => :producibles
+  =f.input :static_storage, :show => :storage
+  =f.input :state
+  =f.input :started_at
+  =f.input :stopped_at
+  =f.custom_fields
+
+=field_set(:storage) do
+  =f.referenced_association :storage
