--- a/app/views/backend/land_parcel_clusters/_form.html.haml
+++ b/app/views/backend/land_parcel_clusters/_form.html.haml
@@ -1,2 +1,7 @@
 =field_set do
   =f.input :name
+  =f.input :work_number
+  =f.input :description, :field => :text
+  =f.input :real_quantity
+  =f.input :unit
+  -# input :shape
