Replaces atomic notion with individual notion

--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -16,10 +16,10 @@
   =f.input :saleable, :show => :product_account
   =f.input :purchasable, :show => :charge_account
   -#=f.input :producible
-  =f.input :atomic
+  =f.input :individual
   -#=f.input :alive
   -#=f.input :deliverable # , :show => :stock_options
-  =f.input :storable, :show => :stock_account#, :show => :stocks, :in => :stock_options
+  =f.input :storable, :show => :stock_account #, :show => :stocks, :in => :stock_options
   -#=f.input :traceable
   -#=f.input :storage
   =f.input :subscribing, :show => :subscription
